--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
-# Images
-*.jpg
-*.jpeg
-*.png
-*.gif
-*.svg
-*.ico
+# Images (exclude images folder)
+# Allow images in the images/ directory
+!images/
+!images/*.jpg
+!images/*.jpeg
+!images/*.png
+!images/*.gif
 
 # Documents
 *.docx
